Update Carga y limpieza.ipynb
Cambie de datos a data

--- a/Data/Carga y limpieza.ipynb
+++ b/Data/Carga y limpieza.ipynb
@@ -5,7 +5,7 @@
    "id": "f9d9638f-ce2b-4657-bbdf-4ed9932322b4",
    "metadata": {},
    "source": [
-    "# Carga y limpieza de los datos"
+    "# Carga y limpieza de la data"
    ]
   },
   {
